--- a/node_file/web/landing/industry/index.html
+++ b/node_file/web/landing/industry/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Story by HTML5 UP</title>
+	<title>LS IoT Industry</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,11 +18,10 @@
 
 <body class="is-preload">
 	<!-- Header -->
-	<header id="header" class="alt">
-		<span class="logo"><img src="images/logo.svg" alt="" /></span>
-		<h1>Stellar</h1>
-		<p>Just another free, fully responsive site template<br />
-			built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+	<a href = "../../index.html"><header id="header" class="alt"><span class="logo"> <img src="images/logo.svg" alt="" ></span></a>
+		<h1>Ls  IoT </h1>
+		<p>Just another free, Control multiple objects with one system<br><br></p>
+			<a href="#zero" class="button big wide smooth-scroll-middle" id="button1">   Next    </a>
 	</header>
 
 	<!-- Wrapper -->
@@ -30,17 +29,16 @@
 
 
 		<!-- One -->
-		<section
-			class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id = "zero">
 			<div class="content">
-				<h1>산업용의 자랑거리 설명</h1>
-				<p class="major">내용을 채워보자.</p>
+				<h1> Web Contral </h1>
+				<p class="major"> IoT장비의 영상처리를 바탕으로 연결된 DataBase의 자료를 Web page로 실시간 전송.</p>
 				<ul class="actions stacked">
-					<li><a href="#first" class="button big wide smooth-scroll-middle">다음페이지로</a></li>
+					<li><a href="#first" class="button big wide smooth-scroll-middle">Next</a></li>
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images/banner.jpg" alt="" />
+				<img src="REALimg/DB.jpeg" alt="" />
 			</div>
 		</section>
 
@@ -48,14 +46,14 @@
 		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
 			id="first">
 			<div class="content">
-				<h2>공간 효율적 활용강조</h2>
-				<p>그럴싸한 내용을 작성합시다.</p>
+				<h2>Line-Tracer Robot</h2>
+				<p>산업체에서 물건을 무인으로 운반하기위해 IoT장비에 탑제된 센서를 통하여 Line-Tracer를 실시하여 Database 에 지정된 위치로 이동.</p>
 				<ul class="actions stacked">
-					<li><a href="#second" class="button big wide smooth-scroll-middle">다음페이지로</a></li>
+					<li><a href="#second" class="button big wide smooth-scroll-middle">Next</a></li>
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images/spotlight01.jpg" alt="" />
+				<img src="REALimg/rine.jpg" alt="" />
 			</div>
 		</section>
 
@@ -63,63 +61,56 @@
 		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
 			id="second">
 			<div class="content">
-				<h2>인력이 기존 대비 감소한다고 말하기</h2>
-				<p>그럴싸한 내용을 작성합시다.</p>
+				<h2>부족한 인력 대체 효율 상승 </h2>
+				<p> 인력대신 IoT장비를 가동하여 기존인력의 노동력을 대신하며 사람이 직접 물건을 옮기는 부담을 덜고 가동을 시작한 시점부터 작업이 끝날때까지 
+					인력을 교체하지 않아 지속적인 효율을 기대 할 수 있다.
+				</p>
 				<ul class="actions stacked">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="#three" class="button big wide smooth-scroll-middle">Next</a></li>
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images/spotlight02.jpg" alt="" />
+				<img src="REALimg/pro.jpg" alt="" />
 			</div>
 		</section>
 
 		<!-- Four -->
-		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" 
+			id ="three">
 			<div class="content">
-				<h2>사무실에서 내려진 명령을 집접 수행한다는걸 설명</h2>
-				<p>그럴싸한 내용을 작성합시다.</p>
+				<h2>IoT 장비 구동</h2>
+				<p>저희 IoT장비는 Line-Tracer를 사용하여 정해놓은 길을 따라가며 장비센서와 캠의영상처리를 통해 장애물을 인식하고 상품의 QR_code를 찍어 찍은 자료를 
+					DataBase로 전송해주는 방식이다.
+				</p>
 				<ul class="actions stacked">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="#four" class="button big wide smooth-scroll-middle">Next</a></li>
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images/spotlight03.jpg" alt="" />
+				<img src="REALimg/IoT.jpg" alt="" />
 			</div>
 		</section>
 		<!-- Three-1 -->
 		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
-			id="second">
+			id="four">
 			<div class="content">
-				<h2>물류 작업 수행과정(로봇이 어떻게 어느공정에서 수행되는지..)</h2>
-				<p>그럴싸한 내용을 작성합시다.</p>
+				<h2>작업자의 안정성 (장애물탐지)</h2>
+				<p>IoT장비의 영상처리(얼굴인식)기능을 바탕으로 사람얼굴을 인식하였을 경우 장비가 정지되며 또한 사람이 아닌 주변 장애물등도 
+					센서를 통하여 정지가 가능하여 작업자의 안정성을 높일수있다.</p>
 				<ul class="actions stacked">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="#five" class="button">Next</a></li>
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images/spotlight02.jpg" alt="" />
+				<img src="REALimg/senser.png" alt="" />
 			</div>
 		</section>
 		<!-- Four -1 -->
-		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-			<div class="content">
-				<h2>작업자의 안정사항 강조(과로, 장애물탐지, 초과근무 관리등등</h2>
-				<p>그럴싸한 내용을 작성합시다.</p>
-				<ul class="actions stacked">
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
-			</div>
-			<div class="image">
-				<img src="images/spotlight03.jpg" alt="" />
-			</div>
-		</section>
-
 		<!-- Five -->
-		<section class="wrapper style1 align-center">
+		<section class="wrapper style1 align-center" id="five">
 			<div class="inner">
-				<h2>현장 사진들</h2>
-				<p>내용설명</p>
+				<h2>현장 사진</h2>
+				<p> 개발자들의 현장(근무,작업) 사진이다.</p>
 			</div>
 
 			<!-- Gallery -->
@@ -149,198 +140,67 @@
 					</div>
 				</article>
 				<article>
-					<a href="images/gallery/fulls/03.jpg" class="image">
-						<img src="images/gallery/thumbs/03.jpg" alt="" />
+					<a href="REALimg/color (4).jpg" class="image">
+						<img src="REALimg/color (4).jpg" alt="" />
 					</a>
 					<div class="caption">
-						<h3>Magna Amet</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>라카 작업</h3>
+						<p>라카 작업 입니다.</p>
 						<ul class="actions fixed">
 							<li><span class="button small">Details</span></li>
 						</ul>
 					</div>
 				</article>
 				<article>
-					<a href="images/gallery/fulls/04.jpg" class="image">
-						<img src="images/gallery/thumbs/04.jpg" alt="" />
+					<a href="REALimg/sk.png" class="image">
+						<img src="REALimg/sk.png" alt="" />
 					</a>
 					<div class="caption">
-						<h3>Sed Tempus</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>3D 모델링</h3>
+						<p>3D 모델링 입니다.</p>
 						<ul class="actions fixed">
 							<li><span class="button small">Details</span></li>
 						</ul>
 					</div>
 				</article>
-				<!-- <article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article> -->
-				<!-- <article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
-										<img src="images/gallery/thumbs/06.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
-										<img src="images/gallery/thumbs/07.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
-										<img src="images/gallery/thumbs/09.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
-										<img src="images/gallery/thumbs/10.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
-										<img src="images/gallery/thumbs/11.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
-										<img src="images/gallery/thumbs/12.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article> -->
+				<article>
+					<a href="REALimg/ardu.png" class="image">
+						<img src="REALimg/ardu.png" alt="" />
+					</a>
+					<div class="caption">
+						<h3>아두이누 회로도</h3>
+						<p>아두이누 회로도 입니다.</p>
+						<ul class="actions fixed">
+							<li><span class="button small">Details</span></li>
+						</ul>
+					</div>
+				</article>
 			</div>
 
 		</section>
-
 		<!-- Six -->
 		<section class="wrapper style1 align-center">
 			<div class="inner">
-				<h2>기타 이것저것 설명</h2>
+				<h2>IoT장비 특수 기능 </h2>
 				<p>내용.</p>
 				<div class="items style1 medium onscroll-fade-in">
 					<section>
 						<span class="icon style2 major fa-gem"></span>
-						<h3>Lorem</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+						<h3>영상처리</h3>
+						<p>Also called photo processing. Digital image processing by computers is being used in many application fields such as space observation, medical use, photo analysis, design, and various pattern recognition due to the rapid development of memory devices. TV cameras, CCD cameras, etc. are used as video input devices, and various output devices such as copy hard and software are used, 
+							and special technologies for processing digitized images with computers are also being developed.</p>
 					</section>
 					<section>
 						<span class="icon solid style2 major fa-save"></span>
-						<h3>Ipsum</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+						<h3>장애물탐지</h3>
+						<p>In order to introduce an obstacle detection system, it was implemented using an Arduino ultrasonic sensor and image processing technology.
+							And, using raspberry, deep learning was conducted to realize decentralization.</p>
 					</section>
 					<section>
 						<span class="icon solid style2 major fa-chart-bar"></span>
-						<h3>Dolor</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+						<h3>데이터 전송</h3>
+						<p>Data communication, which provides the foundation for a modern information society, is an integrated form of computer-based information processing technology and data transmission technology related to computer networks. Data communication can be understood as a combination of data transmission technology and data processing function.</p>
 					</section>
-					<!-- <section>
-									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-cog"></span>
-									<h3>Magna</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-desktop"></span>
-									<h3>Aliquam</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-sync-alt"></span>
-									<h3>Elit</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-hashtag"></span>
-									<h3>Morbi</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-bolt"></span>
-									<h3>Turpis</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-envelope"></span>
-									<h3>Ultrices</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-leaf"></span>
-									<h3>Risus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section> -->
 				</div>
 			</div>
 		</section>
@@ -376,14 +236,12 @@
 		<footer class="wrapper style1 align-center">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="1.html" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
+					<li><a href="https://twitter.com" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
 					</li>
-					<li><a href="https://www.instagram.com/asddddw_/" class="icon brands style2 fa-instagram"><span
+					<li><a href="https://www.instagram.com/" class="icon brands style2 fa-instagram"><span
 								class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a>
-					</li>
-					<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://github.com/jung-ki-hun/project_J" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<p>&copy; Untitled. Design: <a href="../../industry_function.html">HTML5 UP</a>.</p>
 			</div>
