--- a/node_file/web/pages-productlist.html
+++ b/node_file/web/pages-productlist.html
@@ -10,45 +10,45 @@
 					cellspacing="0">
 					<thead>
 						<tr>
-							<th>Image</th>
+							<!-- <th>Image</th> -->
 							<th>Product Name</th>
-							<th>Added Date</th>
+							<!-- <th>Added Date</th> -->
 							<th>Amount</th>
 							<th>No. of Units</th>
 							<th>Stock</th>
 							<th>Action</th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody id=list_item>
 						<h3 class="page-title">Ecommerce product-list</h3><br>
-						<tr>
-							<td class="product-list-img">
-								<img src="assets/images/products/pic.jpg" class="img-fluid" alt="tbl">
-							</td>
-							<td>
-								<h6 class="mt-0 m-b-5">문구류</h6>
-								<p class="m-0 font-14">pencil</p>
-							</td>
-							<td>22/05/2017</td>
-							<td>1000원</td>
-							<td>A_1</td>
-							<td>
-								<div class="progress" style="height: 5px;">
-									<div class="progress-bar bg-danger" role="progressbar" style="width: 55%;"
-										aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-								</div>
-							</td>
-							<td>
-								<a href="javascript:void(0);" class="m-r-15 text-muted" data-toggle="tooltip"
-									data-placement="top" title="" data-original-title="Edit"><i
-										class="mdi mdi-pencil font-18"></i></a>
-								<a href="javascript:void(0);" class="text-muted" data-toggle="tooltip"
-									data-placement="top" title="" data-original-title="Delete"><i
-										class="mdi mdi-close font-18"></i></a>
-							</td>
-						</tr>
+						
+							<!-- <tr>
+
+								<td>
+									<h6 class="mt-0 m-b-5">문구류</h6>
+									<p class="m-0 font-14">pencil</p>
+								</td>
+
+								<td>1000원</td>
+								<td>A_1</td>
+								<td>
+									<div class="progress" style="height: 5px;">
+										<div class="progress-bar bg-danger" role="progressbar" style="width: 55%;"
+											aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
+								</td>
+								<td>
+									<a href="javascript:void(0);" class="m-r-15 text-muted" data-toggle="tooltip"
+										data-placement="top" title="" data-original-title="Edit"><i
+											class="mdi mdi-pencil font-18"></i></a>
+									<a href="javascript:void(0);" class="text-muted" data-toggle="tooltip"
+										data-placement="top" title="" data-original-title="Delete"><i
+											class="mdi mdi-close font-18"></i></a>
+								</td>
+							</tr> -->
 						
 
+						<!--
 						<tr>
 							<td class="product-list-img">
 								<img src="assets/images/products/2.jpg" class="img-fluid" alt="tbl">
@@ -391,7 +391,7 @@
 									data-placement="top" title="" data-original-title="Delete"><i
 										class="mdi mdi-close font-18"></i></a>
 							</td>
-						</tr>
+						</tr> -->
 
 					</tbody>
 				</table>
@@ -405,7 +405,7 @@
 
 	<script src="assets/plugins/datatables/dataTables.responsive.min.js"></script>
 	<script src="assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
-
+	<script src="js/pages-ajax-productlist.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function () {
 			$('#datatable').DataTable();
